

@startuml

title: Diagrama Academia

class Student {
    - name: String
    - address: String
    - fone: String
    + construtor(nome, edereco, telefone)      
            
    
}

class Gym{
    - name : String
    - address : String
    - cnpj: Int
    + construtor(nome, endreco, cnpj)
}


class Training{
    - date: date
    - obs: String
    - exercises: Exercises
    - gym : Gym
    - student : Student
    + construtor(data, observacoes)
}

class Exercises{
    - type: String
    - weigth: int
    - hits: int
    + construtor(tipo, peso, repeticoes)
    
}

class Plan{
    - food: String
    - quantity: int
    - student: Student
    + construtor(alimento, quantidade)
}

  
Gym --* Training
Training *-- Exercises
Training *-- Student
Plan *-- Student






@enduml